implemented update vehicle with validations

--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/admin-vehicle-browsing.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/admin-vehicle-browsing.component.html
@@ -56,7 +56,10 @@
             <!-- pass the vehicle to render on
             each iteration into the vehicle card
             component via property binding of "vehicleToRender" declared in VehicleCard component -->
-            <app-vehicle-card [vehicleToRender]="vehicle" (adminClickedDelete)="processDeleteClicked($event)"></app-vehicle-card>
+            <!-- listen to custom events emitted by the vehicle card component -->
+            <app-vehicle-card [vehicleToRender]="vehicle" (adminClickedDelete)="processDeleteClicked($event)"
+              (adminEditClicked)="processEditClicked($event)">
+            </app-vehicle-card>
           </div>
         </div>
       </div>
