--- a/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
+++ b/src/app/components/admin/admin-vehicle-management/admin-vehicle-browsing/vehicle-create-update/vehicle-create-update.component.html
@@ -235,8 +235,10 @@
       </div>
       <div class="row mt-3">
         <div class="col-sm-12">
-          <button class="btn btn-primary float-right ml-2" style="width:30%;" type="button"
+          <button class="btn btn-primary float-right ml-2" style="width:30%;" type="button" *ngIf="!vehicleBeingEdited"
             [disabled]="vehicleForm.invalid || !loadedImage" (click)="createVehicle()">Create Vehicle</button>
+          <button class="btn btn-primary float-right ml-2" style="width:30%;" type="button" *ngIf="vehicleBeingEdited"
+            [disabled]="vehicleForm.invalid" (click)="updateVehicle()">Update Vehicle</button>
           <button class="btn btn-warning float-right" style="width:30%;" matStepperPrevious
             type="button">Previous</button>
         </div>
