updated breadcrumb on addons

--- a/src/app/components/admin/equipment-management/equipment-management.component.html
+++ b/src/app/components/admin/equipment-management/equipment-management.component.html
@@ -1,5 +1,5 @@
 <app-admin-nav></app-admin-nav>
-<app-bread-crumb [pageName]="'Additional Rental Equipment Management'"></app-bread-crumb>
+<app-bread-crumb [pageName]="'Additional Equipment Management'"></app-bread-crumb>
 
 <div class="container">
   <div class="row">
