implemented viewing pending rentals

--- a/src/app/components/admin/admin-rental-list/admin-rental-list.component.html
+++ b/src/app/components/admin/admin-rental-list/admin-rental-list.component.html
@@ -1,2 +1,3 @@
 <app-admin-nav></app-admin-nav>
 <app-bread-crumb [pageName]="'Rental Management'"></app-bread-crumb>
+<router-outlet></router-outlet>
