--- a/src/app/components/admin/admin-rental-list/pending-rentals/pending-rentals.component.html
+++ b/src/app/components/admin/admin-rental-list/pending-rentals/pending-rentals.component.html
@@ -7,10 +7,17 @@
       </app-rental-table-list>
     </div>
     <ng-template #showEmpty>
-      <div class="col-sm-12">
+      <div class="col-sm-12" *ngIf="!isError">
         <div class="alert alert-info">
           <h5 class="alert-heading">No Pending Rentals!</h5>
           All the rentals have been handled successfully!
+        </div>
+      </div>
+
+      <div class="col-sm-12" *ngIf="isError">
+        <div class="alert alert-danger">
+          <h5 class="alert-heading">Failed to Retrieve Pending Rentals</h5>
+          Please try again to see if the rentals can be loaded.
         </div>
       </div>
     </ng-template>
