--- a/src/app/components/admin/admin-rental-list/rental-table-list/rental-table-list.component.html
+++ b/src/app/components/admin/admin-rental-list/rental-table-list/rental-table-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-12">
-    <table class="table table-borderless custom-table">
+    <table class="table table-borderless custom-table" *ngIf="rentalList.length > 0">
       <tr class="table-header">
         <th class="left-header">#</th>
         <th>Rental Duration</th>
@@ -44,6 +44,11 @@
         </td>
       </tr>
     </table>
+
+    <div class="alert alert-warning" *ngIf="rentalList.length === 0">
+      <h5 class="alert-header">No Rentals Found</h5>
+      We could not find any rentals for your request.
+    </div>
   </div>
 </div>
 
