added a close method

--- a/src/app/components/admin/admin-rental-list/detailed-rental/handle-rental/handle-rental.component.html
+++ b/src/app/components/admin/admin-rental-list/detailed-rental/handle-rental/handle-rental.component.html
@@ -1,6 +1,6 @@
 <div class="modal-header">
   <h5 class="modal-title float-left">{{rentalBeingApproved ? 'Approve Rental' : 'Reject Rental'}}</h5>
-  <button class="close float-right">&times;</button>
+  <button class="close float-right" (click)="hideModal()">&times;</button>
 </div>
 
 <div class="modal-body">
