added the customer rejected component

--- a/src/app/components/customer/customer-rental/customer-rental.component.html
+++ b/src/app/components/customer/customer-rental/customer-rental.component.html
@@ -18,6 +18,10 @@
       <a class="nav-link" routerLinkActive="active" [routerLink]="['/customer','rentals','past']">Past
         Rentals</a>
     </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/customer','rentals','rejected']">Rejected
+        Rentals</a>
+    </li>
   </ul>
 </div>
 
