added support for viewing total equipment cost in rental for both customer and admin

--- a/src/app/components/customer/customer-rental/customer-rental-card/customer-rental-card.component.html
+++ b/src/app/components/customer/customer-rental/customer-rental-card/customer-rental-card.component.html
@@ -25,7 +25,7 @@
         Late Return: {{theRental.lateReturnRequested ? 'Yes' : 'No'}}
       </div>
       <div class="col-sm-4">
-        Add Ons: {{theRental.equipmentsAddedToRental.length === 0 ? 'Yes' : 'No'}}
+        Add Ons: {{theRental.equipmentsAddedToRental.length > 0 ? 'Yes' : 'No'}}
       </div>
     </div>
 
