--- a/src/app/components/shared/show-vehicle-on-rental/show-vehicle-on-rental.component.html
+++ b/src/app/components/shared/show-vehicle-on-rental/show-vehicle-on-rental.component.html
@@ -34,6 +34,9 @@
               <img src="../../../../assets/gearbox.svg" width="20" height="20">:
               {{vehicleToBeRented.transmission}}
             </div>
+            <div class="col-sm-8">
+              Price Per Day: {{vehicleToBeRented.vehicleType.pricePerDay}}
+            </div>
           </div>
         </div>
       </div>
