--- a/src/app/components/admin/admin-rental-list/approved-rentals/approved-rentals.component.html
+++ b/src/app/components/admin/admin-rental-list/approved-rentals/approved-rentals.component.html
@@ -1,1 +1,25 @@
-<p>approved-rentals works!</p>
+<div class="container">
+  <app-section-header [sectionText]="'Approved Rentals At Banger and Co.'" (filterTriggered)="searchTriggered($event)">
+  </app-section-header>
+  <div class="row">
+    <div class="col-sm-12" *ngIf="filteredList.length > 0; else showEmpty">
+      <app-rental-table-list [rentalList]="filteredList" (loadMoreClicked)="getMore()">
+      </app-rental-table-list>
+    </div>
+    <ng-template #showEmpty>
+      <div class="col-sm-12" *ngIf="!isError">
+        <div class="alert alert-info">
+          <h5 class="alert-heading">No Approved Rentals!</h5>
+          All rentals have been collected
+        </div>
+      </div>
+
+      <div class="col-sm-12" *ngIf="isError">
+        <div class="alert alert-danger">
+          <h5 class="alert-heading">Failed to Retrieve Approved Rentals</h5>
+          Please try again to see if the rentals can be loaded.
+        </div>
+      </div>
+    </ng-template>
+  </div>
+</div>
