--- a/src/app/components/admin/admin-rental-list/detailed-rental/detailed-rental.component.html
+++ b/src/app/components/admin/admin-rental-list/detailed-rental/detailed-rental.component.html
@@ -119,11 +119,15 @@
               {{loadedRental.totalCostForRental.toFixed(2)}}</span>
           </div>
         </div>
-        <div class="col-sm-6 align-self-center">
-          <button class="btn btn-primary float-right" style="width: 45%;height: 100%;"
+        <div class="col-sm-6" *ngIf="!loadedRental.approved">
+          <button class="btn btn-primary float-right" style="width: 45%;height: 77%;"
             (click)="handleRental(true)">Approve Rental</button>
-          <button class="btn btn-danger float-right mr-2" style="width: 45%;height: 100%;"
+          <button class="btn btn-danger float-right mr-2" style="width: 45%;height: 77%;"
             (click)="handleRental(false)">Reject Rental</button>
+        </div>
+        <div class="col-sm-6" *ngIf="loadedRental.approved === true">
+          <button class="btn btn-primary float-right" style="width: 100%;height: 77%;"
+            (click)="startRental()">Start Rental (Customer Has Collected)</button>
         </div>
       </div>
 
