added badge to show rental count on customer

--- a/src/app/components/customer/customer-rental/customer-approved/customer-approved.component.html
+++ b/src/app/components/customer/customer-rental/customer-approved/customer-approved.component.html
@@ -1,3 +1,9 @@
+<div class="row">
+  <div class="col-sm-6">
+    <span class="badge badge-info p-2 mb-2" style="font-size: 16px;">Total Approved - {{approvedRentals.length}}</span>
+  </div>
+</div>
+
 <div class="row" *ngIf="approvedRentals.length > 0">
   <div class="col-sm-6" *ngFor="let eachRental of approvedRentals">
     <app-customer-rental-card [theRental]="eachRental"></app-customer-rental-card>
