--- a/src/app/components/admin/admin-rental-list/admin-rental-list.component.html
+++ b/src/app/components/admin/admin-rental-list/admin-rental-list.component.html
@@ -8,7 +8,19 @@
     </li>
     <li class="nav-item">
       <a class="nav-link" routerLinkActive="active" [routerLink]="['/admin','rentals','approved']"
-        [routerLinkActiveOptions]="">Approved Rentals</a>
+        [routerLinkActiveOptions]="">Approved (Can Collected) Rentals</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/admin','rentals','rejected']"
+        [routerLinkActiveOptions]="">Rejected Rentals</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/admin','rentals','on_going']"
+        [routerLinkActiveOptions]="">On-Going Rentals</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" routerLinkActive="active" [routerLink]="['/admin','rentals','completed']"
+        [routerLinkActiveOptions]="">Completed Rentals</a>
     </li>
   </ul>
 </div>
