--- a/src/app/components/admin/admin-rental-list/detailed-rental/handle-rental/handle-rental.component.html
+++ b/src/app/components/admin/admin-rental-list/detailed-rental/handle-rental/handle-rental.component.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h5 class="modal-title float-left">{{rentalBeingApproved ? 'Approve Rental' : 'Reject Rental'}}</h5>
+  <h5 class="modal-title float-left">{{getHeader()}}</h5>
   <button class="close float-right" (click)="hideModal()">&times;</button>
 </div>
 
@@ -7,17 +7,29 @@
   <div class="row">
     <div class="col-sm-12">
       <i class="far fa-exclamation-circle float-left mr-3" style="font-size: 50px; color:red"></i>
-      <span class="" *ngIf="rentalBeingApproved; else isReject">
+      <span class="" *ngIf="rentalBeingApproved; else showMoreOptions">
         Are you sure you want to approve this rental?
       </span>
-      <ng-template #isReject>
-        <div>
+      <ng-template #showMoreOptions>
+        <!-- reject -->
+        <div *ngIf="!this.rentalBeingApproved && !this.rentalBeingCollected && !this.rentalBeingReturned">
           Are you sure you want to reject this rental?
         </div>
-        <div class="mt-3">
+        <div class="mt-3" *ngIf="!this.rentalBeingApproved && !this.rentalBeingCollected && !this.rentalBeingReturned">
           <textarea class="form-control" style="resize: none;" rows="5" cols="12"
             placeholder="Provide Your Reject Reason..." [(ngModel)]="rejectedReason"></textarea>
         </div>
+        <!-- start rental -->
+        <div *ngIf="!this.rentalBeingApproved && !this.rentalBeingReturned && this.rentalBeingCollected">
+          Are you sure you want to start this rental?
+        </div>
+
+        <!-- return (finish) rental -->
+        <div *ngIf="!this.rentalBeingApproved && this.rentalBeingReturned && !this.rentalBeingCollected">
+          Are you sure you want to finish this rental?
+        </div>
+
+
       </ng-template>
       <br>
       <span class="" style="color: red;">
@@ -30,5 +42,5 @@
 <div class="modal-footer">
   <button class="btn btn-danger float-right mr-2" style="width: 20%;" (click)="hideModal()">Close</button>
   <button class="btn btn-primary float-right" style="width: 35%;"
-    (click)="handleRentalApproveReject()">{{action}}</button>
+    (click)="handleAction()">{{action}}</button>
 </div>
