added charts required

--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -12,7 +12,12 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
-
+      <!-- dashboard for charts displayed here -->
+      <!-- 4 types of data to be viewed -->
+      <!-- 1. chart to get completed rentals for past 12 months -->
+      <!-- 2. chart to get profits made for 12 months -->
+      <!-- 3. view rentals needed to be collected for this month -->
+      <!-- view total pending rentals -->
     </div>
   </div>
 </div>
