--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -12,12 +12,15 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-12">
+      <app-completed-rentals12-months></app-completed-rentals12-months>
+      <app-profits-made12-months></app-profits-made12-months>
       <!-- dashboard for charts displayed here -->
-      <!-- 4 types of data to be viewed -->
+      <!-- 5 types of data to be viewed -->
       <!-- 1. chart to get completed rentals for past 12 months -->
       <!-- 2. chart to get profits made for 12 months -->
       <!-- 3. view rentals needed to be collected for this month -->
-      <!-- view total pending rentals -->
+      <!-- 4. view all on-going rentals -->
+      <!-- 5. view total pending rentals -->
     </div>
   </div>
 </div>
