migrated ngx-charts to admin module

--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -9,18 +9,22 @@
   </div>
 </div>
 
+<!-- dashboard for charts displayed here -->
+<!-- 5 types of data to be viewed -->
+<!-- 1. chart to get completed rentals for past 12 months -->
+<!-- 2. chart to get profits made for 12 months -->
+<!-- 3. view rentals needed to be collected for this month -->
+<!-- 4. view all on-going rentals -->
+<!-- 5. view total pending rentals -->
+
+
 <div class="container">
   <div class="row">
-    <div class="col-sm-12">
+    <div class="col-sm-6">
       <app-completed-rentals12-months></app-completed-rentals12-months>
+    </div>
+    <div class="col-sm-6">
       <app-profits-made12-months></app-profits-made12-months>
-      <!-- dashboard for charts displayed here -->
-      <!-- 5 types of data to be viewed -->
-      <!-- 1. chart to get completed rentals for past 12 months -->
-      <!-- 2. chart to get profits made for 12 months -->
-      <!-- 3. view rentals needed to be collected for this month -->
-      <!-- 4. view all on-going rentals -->
-      <!-- 5. view total pending rentals -->
     </div>
   </div>
 </div>
