--- a/src/app/components/admin/admin-home/completed-rentals12-months/completed-rentals12-months.component.html
+++ b/src/app/components/admin/admin-home/completed-rentals12-months/completed-rentals12-months.component.html
@@ -1,1 +1,6 @@
-<p>completed-rentals12-months works!</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12">
+    </div>
+  </div>
+</div>
