--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -18,7 +18,7 @@
 <!-- 5. view total pending rentals -->
 
 
-<div class="container">
+<div class="container mt-4">
   <div class="row">
     <div class="col-sm-6">
       <app-completed-rentals12-months></app-completed-rentals12-months>
