--- a/src/app/components/admin/admin-home/completed-rentals12-months/completed-rentals12-months.component.html
+++ b/src/app/components/admin/admin-home/completed-rentals12-months/completed-rentals12-months.component.html
@@ -1,6 +1,20 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-12">
-    </div>
+<div class="row">
+  <div class="col-sm-12" *ngIf="barChartContent.length  > 0">
+    <mat-card style="font-family: 'Inter', sans-serif; width: 100%; height: 100%;">
+      <mat-card-title style="font-size: 18px;">
+        Rentals Completed Over The Past Year
+      </mat-card-title>
+
+      <mat-card-content>
+        <div class="row">
+          <div class="col-sm-12" style="height: 60vh;">
+            <ngx-charts-bar-vertical [results]="barChartContent" [animations]="true" [xAxis]="true" [yAxis]="true"
+              [xAxisLabel]="'Month'" [yAxisLabel]="'Completed Rentals'" [showXAxisLabel]="true" [showYAxisLabel]="true"
+              [noBarWhenZero]="false" style="font-family: 'Inter', sans-serif;" [scheme]="colorScheme">
+            </ngx-charts-bar-vertical>
+          </div>
+        </div>
+      </mat-card-content>
+    </mat-card>
   </div>
 </div>
