--- a/src/app/components/customer/customer-rental/customer-rental-card/customer-rental-card.component.html
+++ b/src/app/components/customer/customer-rental/customer-rental-card/customer-rental-card.component.html
@@ -22,10 +22,10 @@
 
     <div class="row mt-1">
       <div class="col-sm-4">
-        Late Return: {{theRental.lateReturnRequested ? 'Yes' : 'No'}}
+        Late Return: <span class="fonts">{{theRental.lateReturnRequested ? 'Yes' : 'No'}}</span>
       </div>
       <div class="col-sm-4">
-        Add Ons: {{theRental.equipmentsAddedToRental.length > 0 ? 'Yes' : 'No'}}
+        Add Ons: <span class="fonts">{{theRental.equipmentsAddedToRental.length > 0 ? 'Yes' : 'No'}}</span>
       </div>
     </div>
 
