--- a/src/app/components/admin/admin-rental-list/rental-table-list/rental-table-list.component.html
+++ b/src/app/components/admin/admin-rental-list/rental-table-list/rental-table-list.component.html
@@ -7,6 +7,7 @@
         <th>Vehicle On Rental</th>
         <th>Customer Information</th>
         <th>Add Ons</th>
+        <th>Late Return</th>
         <th>Total Cost</th>
         <th class="right-header" style="text-align: center;">
           <span class="float-right" style="margin-right:20px;">
@@ -35,6 +36,7 @@
           </div>
         </td>
         <td>{{rental.equipmentsAddedToRental.length > 0 ? 'Yes' : 'No'}}</td>
+        <td>{{rental.lateReturnRequested ? 'Yes' : 'No'}}</td>
         <td>LKR - {{rental.totalCostForRental.toFixed(2)}}</td>
         <td>
           <div style="text-align: center;">
