--- a/src/app/components/customer/customer-rental/customer-rental-detailed/customer-rental-detailed.component.html
+++ b/src/app/components/customer/customer-rental/customer-rental-detailed/customer-rental-detailed.component.html
@@ -4,8 +4,16 @@
 <div class="container" *ngIf="theRental; else showError">
 
   <div class="row">
-    <div class="col-sm-12">
-      <span class='float-right p-2 mb-2' style="font-size: 18px;" [ngClass]="getBadgeClass()">{{getBadgeName()}}</span>
+    <div class="col-sm-12 align-self-center">
+      <button class='float-right p-2 mb-2 btn btn-primary ml-2' style="vertical-align: middle;"
+        (click)="launchCreateLateReturn()"
+        *ngIf="!theRental.lateReturnRequested && theRental.collected && !theRental.returned">Request Late
+        Return</button>
+
+      <span class='float-right p-2 mb-2' style="font-size: 18px; vertical-align: middle;"
+        [ngClass]="getBadgeClass()">{{getBadgeName()}}</span>
+      <span class='float-right p-2 mb-2 badge badge-info mr-2' style="font-size: 18px; vertical-align: middle;"
+        *ngIf="theRental.lateReturnRequested">Rental Will Be Late Returned</span>
     </div>
   </div>
 
